--- a/api-reference/payments/fetch-collection.mdx
+++ b/api-reference/payments/fetch-collection.mdx
@@ -1,5 +1,5 @@
 ---
-openapi: get /payments/{payment-id}/attempts
+openapi: get /payments/{payment-id}
 title: Get Payment
 sidebarTitle: Get Payment
 hide_title: true
