--- a/api-reference/payments/list-collection.mdx
+++ b/api-reference/payments/list-collection.mdx
@@ -1,7 +1,7 @@
 ---
 openapi: get /payments
-title: List Payment
-sidebarTitle: List Payment
+title: List Payments
+sidebarTitle: List Payments
 pagination_prev: null
 hide_title: true
 ---
