--- a/developer-resources/introduction.mdx
+++ b/developer-resources/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction 
-description: Welcome to the Spotflow Core - This section contains everything you need to successfully integrate, test, and master the Spotflow platform.
+description: Welcome to the Spotflow Core - This section contains everything you need to successfully integrate, test, master and go live with the Spotflow platform.
 icon: "book-open"
 ---
 
@@ -21,7 +21,7 @@ Follow these steps to integrate Spotflow:
 <Steps>
   1. [Set up your account](https://app.spotflow.co/) and get your API keys
   2. Choose your integration method:
-     - [Use our SDKs](/developer-resources/spotflow-sdks)
+     - [Use our SDKs](/developer-resources/iOS-sdk)
      - [Redirect Checkout API integration](/api-reference/payments/initialize-collection)
       - [Direct API integration for merchants with PCI DSS license](/api-reference/payments/create-collection)
   3. [Set up webhooks](https://app.spotflow.co/) for real-time updates
