made changes requested

--- a/developer-resources/inline-js.mdx
+++ b/developer-resources/inline-js.mdx
@@ -9,10 +9,30 @@ description: InlineJS is Spotflow's JavaScript library designed to simplify the 
 
 Spotflow InlineJS is compatible with all recent versions of modern web browsers that support ECMAScript 5 or later. This includes:
 
-- Google Chrome and Safari on all platforms.
-- Mozilla Firefox and Microsoft Edge on desktop platforms.
+#### Supported Browsers
 
-While we support popular browsers, older versions and those with JavaScript restrictions, like Internet Explorer 9 and Opera Mini in Super Saver mode, are not supported.
+- **Google Chrome**: Version 23 and above (all platforms)
+- **Safari**: Version 7 and above (macOS and iOS)
+- **Mozilla Firefox**: Version 21 and above (desktop)
+- **Microsoft Edge**: Version 79 and above (Chromium-based, desktop)
+- **Opera**: Version 15 and above (desktop)
+
+#### Mobile Browsers
+
+- **Chrome Mobile**: Android 5.0+
+- **Safari Mobile**: iOS 10+
+- **Samsung Internet**: Version 4.0+
+
+### Unsupported Browsers
+The following browsers and configurations are not supported:
+
+- **Internet Explorer (all versions, including IE 11)**
+- **Opera Mini in Super Saver/Extreme mode**
+- **Browsers with JavaScript disabled**
+- **Legacy browsers that do not support ECMAScript 5**
+
+### Recommendations
+For the best experience, we recommend using the latest stable version of any supported browser with JavaScript enabled.
 
 ## Installation
 
