--- a/developer-resources/webhooks/overview.mdx
+++ b/developer-resources/webhooks/overview.mdx
@@ -6,7 +6,7 @@ icon: "compass"
 
 ## Getting Started
 This guide will walk you through setting up and securely handling webhooks. Our implementation follows the [Standard Webhooks](https://standardwebhooks.com/) specification.
-Your webhook setup is simple: just define the URL where you want to receive event data.
+Your webhook setup is simple: just define the URL where you want to receive event data. You'll find the **Webhook Payloads** for [payment collections](/developer-resources/webhooks/payment-collections) and [accounts i.e spotflow wallets and dynamic accounts](/developer-resources/webhooks/accounts) here. 
 
 Follow these steps to set up your webhook:
 <Steps>
