--- a/features/spotflow-demo-checkout.mdx
+++ b/features/spotflow-demo-checkout.mdx
@@ -7,7 +7,7 @@ icon: "palette"
 <Frame>
   <iframe 
       className="w-full aspect-video rounded-md" 
-      src="https://www.youtube.com/embed/zE6jtNeW"
+      src="https://www.youtube.com/embed/99m8iTjoQJw?si=emtXVK0pNeZ2HUKP"
       title="Setup Your Account | Spotflow"
       frameBorder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
