--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,7 +11,7 @@ Want to get started off using Spotflow right away? Follow these essential steps 
 
 <AccordionGroup>
   <Accordion title="Step 1 : Login to your account or Sign up">
-    Log in using your email and password, or sign in with Google. If you don't have an account yet, you can create one at [https://app.spotflow.co/signup](https://app.spotflow.co/signup).
+    Log in using your email and password. If you don't have an account yet, you can create one at [https://app.spotflow.co/signup](https://app.spotflow.co/signup).
 
   </Accordion>
 
