--- a/features/spotflow-demo-checkout.mdx
+++ b/features/spotflow-demo-checkout.mdx
@@ -7,8 +7,8 @@ icon: "palette"
 <Frame>
   <iframe 
       className="w-full aspect-video rounded-md" 
-      src="https://www.youtube.com/embed/99m8iTjoQJw?si=emtXVK0pNeZ2HUKP"
-      title="Setup Your Account | Spotflow"
+      src="https://www.youtube.com/embed/3D5EVUTUy8s?si=jH3Xqb9PjVqNyome"
+      title="Spotflow Checkout Demo | Spotflow"
       frameBorder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowFullScreen
