--- a/developer-resources/redirectapi-in-your-app.mdx
+++ b/developer-resources/redirectapi-in-your-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: Integrate Spotflow Initialize/Redirect API Into Your Application
-description: This tutorial will help you integrate the Spotflow API into your website.
+description: This tutorial will help you integrate the Spotflow API into your application.
 icon: "plug"
 ---
 
